# acceptxmr

./: .env  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  acceptxmr.yaml  clippy.toml  docker-compose.yml  docker.sh  flake.nix  test.txt  typos.toml
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  rust.yml
examples/: demo.rs
examples/custom_storage/: main.rs
examples/nojs/: main.rs
examples/persistence/: main.rs
examples/static/: acceptxmr.css  acceptxmr.js  index.html  qrcode.js
examples/static/acceptxmr/: acceptxmr.css  acceptxmr.html  acceptxmr.js  qrcode.js
examples/websockets/: main.rs
examples/websockets/static/: acceptxmr.js
server/: Cargo.toml  README.md  acceptxmr.yaml
server/src/: callbacks.rs  lib.rs  logging.rs  main.rs
server/src/config/: callback.rs  daemon.rs  database.rs  logging.rs  mod.rs  server.rs  wallet.rs
server/src/server/: auth.rs  mod.rs  state.rs  tls.rs  websocket.rs
server/src/server/api/: external.rs  internal.rs  mod.rs  templating.rs
server/src/server/api/types/: invoice_id.rs  mod.rs
server/static/: acceptxmr.css  acceptxmr.js  error.html  missing-invoice.html  pay.html
server/tests/common/: mod.rs
server/tests/integration_tests/: bearer_auth.rs  callback.rs  mod.rs  websocket.rs
server/tests/testdata/config/: config_full.yaml  config_no_secrets.yaml
src/: block_cache.rs  error.rs  invoice.rs  invoices_db.rs  lib.rs  main.rs  payment_gateway.rs  payments_db.rs  pubsub.rs  rcp.rs  rpc.rs  scanner.rs  subaddress_cache.rs  subscriber.rs  txpool_cache.rs  util.rs
src/caching/: block_cache.rs  mod.rs  subaddress_cache.rs  txpool_cache.rs
src/rpc/: authentication.rs  mod.rs
src/storage/: invoice_storage.rs  mod.rs  output_key_storage.rs
src/storage/stores/: in_memory.rs  mod.rs  sled.rs  sqlite.rs
static/: acceptxmr.css  acceptxmr.js  index.html  qrcode.js
testing-utils/: Cargo.toml
testing-utils/rpc_resources/blocks/2477647/: transactions_0.json
testing-utils/rpc_resources/blocks/2477648/: block.json
testing-utils/rpc_resources/blocks/2477649/: block.json  transactions_0.json
testing-utils/rpc_resources/blocks/2477650/: block.json
testing-utils/rpc_resources/blocks/2477652/: block.json  transactions_0.json
testing-utils/rpc_resources/blocks/2477653/: transactions_0.json  txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477655/: txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477656/: block.json
testing-utils/rpc_resources/blocks/2477657/: block.json
testing-utils/rpc_resources/blocks/2477657_alt/: txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477658_alt/: block.json
testing-utils/rpc_resources/blocks/2477659/: txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477660/: block.json  txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477661/: block.json  transactions_0.json
testing-utils/rpc_resources/blocks/2477662/: daemon_height.json  transactions_0.json  txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477663/: block.json  daemon_height.json
testing-utils/rpc_resources/blocks/2477664/: block.json  transactions_0.json  txs_hashes_0.json
testing-utils/rpc_resources/blocks/2477665/: block.json
testing-utils/rpc_resources/transactions/: hashes_with_payment.json  hashes_with_payment_account_0.json  hashes_with_payment_timelock.json  txs_with_payment_2.json
testing-utils/rpc_resources/txpools/: txpool.json  txpool_with_payment_2.json  txpool_with_payment_account_0.json  txpool_with_payment_timelock.json
testing-utils/src/: daemon.rs  invoice.rs  lib.rs
tests/: integration_test.rs  invoice_tracking.rs  scanning_thread_management.rs
tests/common/: mod.rs
tests/integration_tests/: invoice_tracking.rs  mod.rs  scanning_thread_management.rs
tests/rpc_resources/: transaction_hashes_with_payment_2.json  transactions_with_payment.json  txpool_hashes.json  txpool_hashes_with_payment.json  txpool_hashes_with_payment_2.json  txpool_hashes_with_payment_account_0.json
tests/rpc_resources/2429470/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429471/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429472/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429473/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429474/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429475/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429476/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429477/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429478/: block.json  transactions.json  txs_hashes.json
tests/rpc_resources/2429479/: block.json  daemon_height.json  transactions.json  txs_hashes.json
tests/rpc_resources/2477651/: block.json  txs_hashes_0.json
tests/rpc_resources/2477652/: txs_hashes_0.json
tests/rpc_resources/2477653/: block.json
tests/rpc_resources/2477654/: transactions_0.json
tests/rpc_resources/2477656/: daemon_height.json  transactions_0.json
tests/rpc_resources/2477657_alt/: block.json
tests/rpc_resources/2477658/: block.json
tests/rpc_resources/2477658_alt/: txs_hashes_0.json
tests/rpc_resources/2477659/: daemon_height.json
tests/rpc_resources/2477661/: daemon_height.json
tests/rpc_resources/2477663/: txs_hashes_0.json
tests/rpc_resources/2477664/: daemon_height.json
tests/rpc_resources/2477665/: txs_hashes_0.json
tests/rpc_resources/blocks/2477654/: block.json
tests/rpc_resources/blocks/2477658/: transactions_0.json
tests/rpc_resources/blocks/2477659/: transactions_0.json
tests/rpc_resources/blocks/2477663/: transactions_0.json
tests/rpc_resources/txpools/: hashes_with_payment_timelock.json
