[workspace]
resolver = "2"

members = [
    "server",
    "library",
    "testing-utils"
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

[workspace.dependencies]
acceptxmr = { path = "library" }
actix = "0.13"
actix-files = "0.6"
actix-session = "0.9"
actix-web = "4"
actix-web-actors = "4"
axum = { version = "0.7", default-features = false }
backoff = "0.4"
base64 = "0.22"
bincode = "^2.0.0-rc.3"
blake3 = "1"
bytes = "1"
bytestring = "1"
clap = "4"
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
handlebars = "5"
hex = "0.4"
http-body-util = "0.1"
httpmock = "0.7"
hyper = "1"
hyper-rustls = { version = "0.26", default-features = false }
hyper-util = "0.1"
indexmap = "2"
log = "0.4"
md-5 = "0.10"
mime = "0.3"
monero = "0.20"
qrcode = "0.13"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
rcgen = "0.12"
rustls-pemfile = "2"
secrecy = "0.8"
serde = { version = "1.0", default-features = false }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"
sled = "0.34"
sqlite = "0.33"
strum = "0.26"
tempfile = "3"
tera = "1"
test-case = "3"
testing-utils = { path = "testing-utils" }
thiserror = "1"
tokio = "1"
tokio-rustls = "0.25"
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = "0.5"
tracing-subscriber = "0.3"
utoipa = "4"
utoipa-swagger-ui = "6"

[profile.release]
lto = true
