[package]
name = "acceptxmr-server"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
license = "MIT OR Apache-2.0"
description = "A monero payment gateway."
repository = "https://github.com/busyboredom/acceptxmr"
readme = "README.md"
keywords = ["crypto", "gateway", "monero", "payment", "xmr"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "acceptxmr-server"
path = "src/main.rs"

[dependencies]
acceptxmr = { path = "../library", features = ["serde", "sqlite"] }
actix = "0.13"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
actix-web-actors = "4"
bytestring = "1"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
