[package]
name = "acceptxmr-server"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "A monero payment gateway."
repository = "https://github.com/busyboredom/acceptxmr"
readme = "README.md"
keywords = ["crypto", "gateway", "monero", "payment", "xmr"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "acceptxmr-server"
path = "src/main.rs"

[dependencies]
acceptxmr = { path = "../library", features = ["serde", "sqlite"] }
actix = "0.13"
actix-files = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-web-actors = "4"
actix-web-httpauth = "0.8"
anyhow = "1"
bytestring = "1"
clap = { version = "4", features = ["env"] }
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
log = { version = "0.4", features = ["serde"] }
monero = { version = "0.19", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
rcgen = "0.11"
rustls = "0.21"
rustls-pemfile = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"

[dev-dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["client", "http2", "tcp"] }
hyper-rustls = { version = "0.24", features = ["logging", "http1", "http2", "tls12"], default-features = false }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde_json = "1"
test-case = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
