[package]
name = "acceptxmr-server"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
description = "A monero payment gateway."
repository = "https://github.com/busyboredom/acceptxmr"
readme = "README.md"
keywords = ["crypto", "gateway", "monero", "payment", "xmr"]
categories = ["cryptography::cryptocurrencies"]

[lints]
workspace = true

[[bin]]
name = "acceptxmr-server"
path = "src/main.rs"

[dependencies]
acceptxmr = { workspace = true, features = ["serde", "sqlite"] }
axum = { workspace = true, features = ["http1", "http2", "tokio", "tower-log", "tracing", "query", "json", "ws", "macros"] }
bytes.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["env"] }
dotenv.workspace = true
env_logger.workspace = true
futures.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http2"] }
hyper-rustls = { workspace = true, features = ["logging", "http1", "http2", "tls12"] }
hyper-util = { workspace = true, features = ["client-legacy"] }
log = { workspace = true, features = ["serde"] }
monero = { workspace = true, features = ["serde"] }
rand.workspace = true
rand_chacha.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tera.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "tracing"] }
tokio-rustls.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["fs", "auth", "validate-request"] }
utoipa.workspace = true
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = ["server-auto"] }
mime.workspace = true
serde_json.workspace = true
test-case.workspace = true
testing-utils.workspace = true
tokio-tungstenite.workspace = true
